# metaculus-tetra

./: .gitignore  Cargo.toml  README.md
src/: date_utils.rs  example.json  index.rs  lib.rs  main.rs  metaculus.rs
tests/: ambiguously_resolved_example.json  ambiguously_resolved_range_example.json  date_range_example.json  discussion_example.json  index_test.rs  lib_test.rs  logarithmic_date_range_example.json  logarithmic_range_example.json  metaculus_tests.rs  probability_example.json  range_example.json  resolved_probability_example.json  resolved_range_example.json  tournament_example.json  utils.rs
