[package]
name = "metaculustetra"
version = "0.0.2"
authors = ["holomanga <holomanga@gmail.com>"]
edition = "2021"
description = "A library for interacting with the Metaculus API"
license = "CC0-1.0"
homepage = "https://github.com/TetraspaceW/metaculus-tetra"
repository = "https://github.com/TetraspaceW/metaculus-tetra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
chrono = "0.4"