[package]
name = "metaculustetra"
version = "0.0.4"
authors = ["TetraspaceW <tetraspace.west@protonmail.com>"]
edition = "2021"
description = "A library for interacting with the Metaculus API"
license = "CC0-1.0"
homepage = "https://codeberg.org/TetraspaceW/metaculus-tetra"
repository = "https://codeberg.org/TetraspaceW/metaculus-tetra"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
chrono = "0.4"
